--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<!doctype html><html><head><meta charset="utf-8"><title>Storybook</title><style>html, body {
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-    margin: 0;
-    padding: 0;
-  }</style><script>try {
-    if (window.parent !== window) {
-      window.__REACT_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__REACT_DEVTOOLS_GLOBAL_HOOK__;
-      window.__VUE_DEVTOOLS_GLOBAL_HOOK__ = window.parent.__VUE_DEVTOOLS_GLOBAL_HOOK__;
-    }
-  } catch (e) {
-    console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script></head><body><div id="root"></div><script src="./sb_dll/storybook_ui_dll.js"></script><script src="runtime~main.729a62daeea60911f9f0.bundle.js"></script><script src="vendors~main.337cf509df699b1e85a1.bundle.js"></script><script src="main.ff0976fa4c0bbe13f0bb.bundle.js"></script></body></html>
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="utf-8">
+    <title>302 Redirect - Moved site</title>
+    <meta http-equiv="refresh" content="5;url=https://carbon-addons-iot-react.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+        * {
+            margin: 1rem auto;
+            font-family: 'IBM Plex Sans', sans-serif;
+            text-align: center;
+        }
+    </style>
+</head>
+
+<body>
+    <h1>Our storybook has moved to <a href="https://carbon-addons-iot-react.com">https://carbon-addons-iot-react.com</a></h1>
+    <p>Please update your bookmarks, pinned links, etc.</p>
+    <p>Redirecting you shortly...</p>
+</body>
+
+</html>
